--- a/documentation/modules/appendix_crds.adoc
+++ b/documentation/modules/appendix_crds.adoc
@@ -1899,7 +1899,7 @@ include::../api/io.strimzi.api.kafka.model.kafka.cruisecontrol.CruiseControlSpec
 |The Cruise Control `brokerCapacity` configuration.
 |config
 |map
-|The Cruise Control configuration. For a full list of configuration options refer to https://github.com/linkedin/cruise-control/wiki/Configurations. Note that properties with the following prefixes cannot be set: bootstrap.servers, client.id, zookeeper., network., security., failed.brokers.zk.path,webserver.http., webserver.api.urlprefix, webserver.session.path, webserver.accesslog., two.step., request.reason.required,metric.reporter.sampler.bootstrap.servers, capacity.config.file, self.healing., ssl., kafka.broker.failure.detection.enable, topic.config.provider.class (with the exception of: ssl.cipher.suites, ssl.protocol, ssl.enabled.protocols, webserver.http.cors.enabled, webserver.http.cors.origin, webserver.http.cors.exposeheaders, webserver.security.enable, webserver.ssl.enable).
+|The Cruise Control configuration. For a full list of configuration options refer to https://github.com/linkedin/cruise-control/wiki/Configurations. Note that properties with the following prefixes cannot be set: bootstrap.servers, client.id, zookeeper., network., security., failed.brokers.zk.path,webserver.http., webserver.api.urlprefix, webserver.session.path, webserver.accesslog., two.step., request.reason.required,metric.reporter.sampler.bootstrap.servers, capacity.config.file, ssl., kafka.broker.failure.detection.enable, topic.config.provider.class (with the exception of: ssl.cipher.suites, ssl.protocol, ssl.enabled.protocols, webserver.http.cors.enabled, webserver.http.cors.origin, webserver.http.cors.exposeheaders, webserver.security.enable, webserver.ssl.enable).
 |metricsConfig
 |xref:type-JmxPrometheusExporterMetrics-{context}[`JmxPrometheusExporterMetrics`]
 |Metrics configuration.
@@ -2283,7 +2283,7 @@ Used in: xref:type-Kafka-{context}[`Kafka`]
 [id='type-Condition-{context}']
 = `Condition` schema reference
 
-Used in: xref:type-KafkaBridgeStatus-{context}[`KafkaBridgeStatus`], xref:type-KafkaConnectorStatus-{context}[`KafkaConnectorStatus`], xref:type-KafkaConnectStatus-{context}[`KafkaConnectStatus`], xref:type-KafkaMirrorMaker2Status-{context}[`KafkaMirrorMaker2Status`], xref:type-KafkaNodePoolStatus-{context}[`KafkaNodePoolStatus`], xref:type-KafkaRebalanceStatus-{context}[`KafkaRebalanceStatus`], xref:type-KafkaStatus-{context}[`KafkaStatus`], xref:type-KafkaTopicStatus-{context}[`KafkaTopicStatus`], xref:type-KafkaUserStatus-{context}[`KafkaUserStatus`], xref:type-StrimziPodSetStatus-{context}[`StrimziPodSetStatus`]
+Used in: xref:type-KafkaAnomalyStatus-{context}[`KafkaAnomalyStatus`], xref:type-KafkaBridgeStatus-{context}[`KafkaBridgeStatus`], xref:type-KafkaConnectorStatus-{context}[`KafkaConnectorStatus`], xref:type-KafkaConnectStatus-{context}[`KafkaConnectStatus`], xref:type-KafkaMirrorMaker2Status-{context}[`KafkaMirrorMaker2Status`], xref:type-KafkaNodePoolStatus-{context}[`KafkaNodePoolStatus`], xref:type-KafkaRebalanceStatus-{context}[`KafkaRebalanceStatus`], xref:type-KafkaStatus-{context}[`KafkaStatus`], xref:type-KafkaTopicStatus-{context}[`KafkaTopicStatus`], xref:type-KafkaUserStatus-{context}[`KafkaUserStatus`], xref:type-StrimziPodSetStatus-{context}[`StrimziPodSetStatus`]
 
 
 [cols="2,2,3a",options="header"]
@@ -4525,5 +4525,66 @@ Used in: xref:type-StrimziPodSet-{context}[`StrimziPodSet`]
 |currentPods
 |integer
 |Number of pods managed by this `StrimziPodSet` resource that have the current revision.
+|====
+
+[id='type-KafkaAnomaly-{context}']
+= `KafkaAnomaly` schema reference
+
+
+[cols="2,2,3a",options="header"]
+|====
+|Property |Property type |Description
+|spec
+|xref:type-KafkaAnomalySpec-{context}[`KafkaAnomalySpec`]
+|The specification of the Kafka anomaly.
+|status
+|xref:type-KafkaAnomalyStatus-{context}[`KafkaAnomalyStatus`]
+|The status of the Kafka anomaly.
+|====
+
+[id='type-KafkaAnomalySpec-{context}']
+= `KafkaAnomalySpec` schema reference
+
+Used in: xref:type-KafkaAnomaly-{context}[`KafkaAnomaly`]
+
+
+[cols="2,2,3a",options="header"]
+|====
+|Property |Property type |Description
+|anomalyId
+|string
+|AnomalyId.
+|anomalyType
+|string
+|AnomalyType.
+|autoFixTriggered
+|boolean
+|AutoFixTriggered.
+|selfHealingStartTime
+|integer
+|SelfHealingStartTime.
+|action
+|string
+|Action.
+|====
+
+[id='type-KafkaAnomalyStatus-{context}']
+= `KafkaAnomalyStatus` schema reference
+
+Used in: xref:type-KafkaAnomaly-{context}[`KafkaAnomaly`]
+
+
+[cols="2,2,3a",options="header"]
+|====
+|Property |Property type |Description
+|conditions
+|xref:type-Condition-{context}[`Condition`] array
+|List of status conditions.
+|observedGeneration
+|integer
+|The generation of the CRD that was last reconciled by the operator.
+|progress
+|string
+|Progress.
 |====
 
