Added KafkaAnomalyAssemblyOperator to handle an anomaly from the operator side
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/documentation/modules/appendix_crds.adoc
+++ b/documentation/modules/appendix_crds.adoc
@@ -4563,6 +4563,9 @@ Used in: xref:type-KafkaAnomaly-{context}[`KafkaAnomaly`]
 |selfHealingStartTime
 |integer
 |SelfHealingStartTime.
+|details
+|string
+|Details.
 |action
 |string
 |Action.
