Draft of support for dynamic controller quorum on new cluster Partial support for scaling up, down and migration from static quorum
Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed controller bootstrap creation when initial controllers are removed
Changed how initial controllers are stored in Kafka status

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Added draft of single controller (un)registration on scale up/down

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Refactored controllers (un)registration on scale up/down in bulk (more
than one at time, but sequentially)

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Added handling of controllers scale down by removing controller role
from existing KafkaNodePool (with mixed nodes)
Added handling of controllers scale up by adding controller role to an
existing KafkaNodePool (with broker only nodes)

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Added support for controllers auto-join (in Apache Kafka 4.2)

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Revert accidental changes to pom.xml and deployment yaml

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Commented leftovers not needed when using auto-join

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Added manual registration/unregistration before/after scale down/scale
up
Left commented out alternative quorum reconciliation approach

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed the rolling of nodes when controllers are scaled

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Fixed Java 21 compiler docs warnings

Signed-off-by: Paolo Patierno <ppatierno@live.com>

Added reconciliation of KRaft quorum in KafkaReconciler
Added KafkaRoller logic for unregister/register controllers on disk
changes
Added usage of deterministic directory ID
Added common formatting of Kafka storage for initial and new controllers
Known bug not supporting scale from broker node to combined (due to
deterministic directory ID)

Si

--- a/documentation/modules/appendix_crds.adoc
+++ b/documentation/modules/appendix_crds.adoc
@@ -2366,6 +2366,9 @@ Used in: xref:type-Kafka-{context}[`Kafka`]
 |autoRebalance
 |xref:type-KafkaAutoRebalanceStatus-{context}[`KafkaAutoRebalanceStatus`]
 |The status of an auto-rebalancing triggered by a cluster scaling request.
+|controllers
+|xref:type-KafkaControllerStatus-{context}[`KafkaControllerStatus`] array
+|List of controller nodes with their IDs and directory IDs. Used for KRaft quorum management and disaster recovery.
 |====
 
 [id='type-Condition-{context}']
@@ -2499,6 +2502,23 @@ The list contains one of the following:
 * Broker IDs for a current auto-rebalance. 
 * Broker IDs for a queued auto-rebalance (if a previous auto-rebalance is still in progress). 
 
+|====
+
+[id='type-KafkaControllerStatus-{context}']
+= `KafkaControllerStatus` schema reference
+
+Used in: xref:type-KafkaStatus-{context}[`KafkaStatus`]
+
+
+[cols="2,2,3a",options="header"]
+|====
+|Property |Property type |Description
+|id
+|integer
+|The node ID of the controller.
+|directoryId
+|string
+|The directory ID of the controller used for KRaft quorum management.
 |====
 
 [id='type-KafkaConnect-{context}']
